1999-02-13  Ian Peters  <ipeters@acm.org>

	* Nothing was connected to delete_event, segfault on wm close.  Removed
	static from exit_cb and really_exit_cb in menu.c, and connected them up
	in gnobots.c, and now it works.

1999-01-26  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnobots.c (argv): Visual/Colormap fix.

	* menu.c: Kill file menu.
